--- a/public/stylesheets/employee/create_monthly_payslip.css
+++ b/public/stylesheets/employee/create_monthly_payslip.css
@@ -254,26 +254,22 @@ ul{
     width: 510px;
 }
 .bread_crumb {
- margin-left: 10px;
+    margin-left: 10px;
 }
 
 #submit-button input{
-    -moz-border-radius:10px;
-    -webkit-border-radius:10px;
-    background:#27292B;
-    color:#FFFFFF;
-    font-family:arial;
-    font-size:14px;
-    font-weight:bold;
-    margin: 0px auto;
-    padding:7px 12px;
-    border:none;
-    float:right;
-    text-align:center;
-    width:auto;
-    cursor:pointer;
-    margin-left:280px;
-    margin-top:30px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    background: #27292B;
+    color: white;
+    font-family: arial;
+    font-size: 14px;
+    font-weight: bold;
+    margin-left: 280px;
+    margin-top: 30px;
+    padding: 7px 10px;
+    border: none;
+    cursor: pointer;
 }
 
 #submit-button input:hover{
