input button style issue fixed in pay fee defaulters
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3744 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/finance/pay_fees_defaulters.css
+++ b/public/stylesheets/finance/pay_fees_defaulters.css
@@ -225,7 +225,7 @@ label-field-pair2 {
 }
 
 td span{
-   color: #990A10;
+    color: #990A10;
 }
 
 table#listing td.col-8 {
@@ -247,7 +247,8 @@ a.user_button{
     font-family: arial;
     cursor:pointer;
     margin-top:4px;
-    margin-left: 806px
+    margin-left: 814px;
+    margin-right: 0;
 }
 
 
