underline removed from hover style of user_button
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3745 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/rtl/application.css
+++ b/public/stylesheets/rtl/application.css
@@ -1040,6 +1040,7 @@ textarea{
 }
 .user_button:hover{
     background: #373b3f;
+    text-decoration: none !important;
 }
 .themed_text{
     color: #B00;
