--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1041,6 +1041,7 @@ textarea{
 }
 .user_button:hover{
     background: #373b3f;
+    text-decoration: none !important;
 }
 .themed_text{
     color: #B00;
