hover text class added in core stylesheets
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3747 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/rtl/application.css
+++ b/public/stylesheets/rtl/application.css
@@ -1045,6 +1045,9 @@ textarea{
 .themed_text{
     color: #B00;
 }
+.themed_hover_text:hover{
+    color: #B00;
+}
 .themed_bg {
     background-color: #B00;
 }
