--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1046,6 +1046,9 @@ textarea{
 .themed_text{
     color: #B00;
 }
+.themed_hover_text:hover{
+    color: #B00;
+}
 .themed_bg {
     background-color: #B00;
 }
