fixed skip button style , fixes #3564
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3748 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/student/previous_data.html.erb
+++ b/app/views/student/previous_data.html.erb
@@ -62,7 +62,7 @@
         <div class="extender"></div>
       </div>
       <div class="save-proceed-button">
-        <%= link_to "► #{t('skip')}", {:controller => "student", :action => "admission4", :id => @student.id },:class=>'skip' %>
+        <%= link_to "► #{t('skip')}", {:controller => "student", :action => "admission4", :id => @student.id },:class=>'user_button' %>
 
         <%= submit_tag "► #{t('save_and_proceed')}" %>
 
