fixed skip button style , fixes #3564
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3749 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/student/admission2.html.erb
+++ b/app/views/student/admission2.html.erb
@@ -218,7 +218,7 @@
         <%= submit_tag "", :value => " ► #{t('finish')}",  :name => "commit", :class => "submit_button3" %>
       </div>
       <div id="skip">
-        <%= link_to "► #{t('click_here_to_skip')}", {:controller => "student", :action => "admission3", :id => @student.id } %>
+        <%= link_to "► #{t('click_here_to_skip')}", {:controller => "student", :action => "admission3", :id => @student.id }, :class => "user_button" %>
       </div>
 
     </div>
