fixed button link styles in guardians page , fixes #3564
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3761 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/archived_student/guardians.erb
+++ b/app/views/archived_student/guardians.erb
@@ -118,7 +118,7 @@
           <div class="parent-edit-button">
             <%= link_to "► #{t('delete_text')}",
               {:controller => 'student', :action => 'del_guardian', :id => p.id },
-              {:confirm => "#{t('are_you_completely_sure')}"} %>
+              {:confirm => "#{t('are_you_completely_sure')}", :class=>"user_button"} %>
           </div>
         <%  end %>
       <% end %>
