fixed button link styles in student fees page , fixes #3564
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3762 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/student/fees.css
+++ b/public/stylesheets/student/fees.css
@@ -227,6 +227,8 @@
     cursor:pointer;
     text-decoration: none;
     margin:0 auto 0 20px;
+    display: inline;
+    float: none;
 }
 .user_button:hover{
     background:  #373B3F;
