--- a/app/views/user/_users.erb
+++ b/app/views/user/_users.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <% if @users.nil? or @users.empty? %>
-  <div id="user_no_result"><%= t('no_users') %></div>
+  <div id="user_no_result" class="themed_text"><%= t('no_users') %></div>
 <% else %>
   <div class="students-table">
     <table id="listing" align="center" width="100%" cellpadding="1" cellspacing="1">
