fixed style issue in general settings
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3766 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -402,6 +402,7 @@ body > #content_wrapper {
     height : 40px;
     width : 600px;
     padding-top: 3px;
+    overflow: hidden;
 }
 .text-input-bg {
     background : transparent;
