--- a/public/stylesheets/rtl/application.css
+++ b/public/stylesheets/rtl/application.css
@@ -402,6 +402,7 @@ body > #content_wrapper {
     height : 40px;
     width : 600px;
     padding-top: 3px;
+    overflow: hidden;
 }
 .text-input-bg {
     background : transparent;
