--- a/app/views/user/profile.erb
+++ b/app/views/user/profile.erb
@@ -65,13 +65,13 @@
   <% if @current_user.admin? %>
     <div class="submit-buttons">
 
-      <% if @user.role_name == 'Employee' %>
+      <% if @user.role_name == "#{t('employee_text')}" %>
         <% if @config.include?('HR') %>
           <%= link_to "► #{t('view_profile')}",{:controller => "employee", :action => "profile", :id => @employee.id }, :class => "user_button" unless @employee.nil?%>
         <% end %>
-      <% elsif @user.role_name == 'Student' %>
+      <% elsif @user.role_name == "#{t('student_text')}" %>
         <%= link_to "► #{t('view_profile')}",{:controller => "student", :action => "profile", :id => @student.id }, :class => "user_button"%>
-      <% elsif @user.role_name == 'Parent' %>
+      <% elsif @user.role_name == "#{t('parent')}" %>
         <%= link_to "►#{t('view')} #{t('student_profile')}",{:controller => "student", :action => "profile", :id => @ward.id }, :class => "user_button"%>
       <% else %>
         <% if @config.include?('HR') %>
@@ -82,7 +82,7 @@
         <%= link_to "#{t('change_password')}", {:controller => "user", :action => "user_change_password", :id =>@user.username}, :class => "user_button" %>
       <% end %>
       <% unless @user.admin %>
-        <% unless @user.role_name == 'Student' or @user.role_name == 'Parent' %>
+        <% unless @user.role_name == "#{t('student_text')}" or @user.role_name == "#{t('parent')}" %>
           <%= link_to "► #{t('edit_privilege_text')}", {:controller => "user", :action => "edit_privilege", :id => @user.username } ,:class => "user_button" %>
         <% end %>
       <% end %>
