--- a/app/views/news/index.erb
+++ b/app/views/news/index.erb
@@ -55,15 +55,53 @@
 
 
   <% unless @news.empty? %>
-    <div id="news_result">
-      <% @news.each_with_index do |r,i| %>
-        <div id="news_search_result">
+    <div id="all_news">
+      <table id="listing" align="center" width="100%" cellpadding="1" cellspacing="1">
+        <tr class="tr-head">
+          <td>
+            <%= t('sl_no') %>
+          </td>
+          <td>
+            <%= t('title') %>
+          </td>
+          <td>
+            <%= t('author') %>
+          </td>
+          <td>
+            <%= t('comments') %>
+          </td>
+          <td>
+            <%= t('posted') %>
+          </td>
+        </tr>
+        <tr class="tr-blank"></tr>
+        <% @news.each_with_index do |r,i| %>
+          <% @comments = NewsComment.find_all_by_news_id(r.id) %>
           <% link_value = r.title %>
-          <%=  link_to link_value, :controller => "news", :action => "view", :id => r.id%><br/>
-          <small><%= t('posted') %><%= time_ago_in_words(r.created_at) %><%= t('ago') %></small>
-        </div>
-        <%= '<div class="extender"></div>' if i%3 == 2 %>
-      <% end %>
+          <tr class="tr-<%= cycle('odd', 'even') %>">
+            <td class="col-1">
+              <%= i+1 %>
+            </td>
+            <td class="col-4">
+              <%=  link_to link_value, :controller => 'news', :action => 'view', :id => r.id%>
+            </td>
+            <td class="col-4">
+              <% unless r.author.blank?  %>
+                <%= r.author.first_name %> <%= '- admin' if r.author.admin==true%>
+              <% else %>
+                <%= t('user_deleted') %>
+              <% end %>
+            </td>
+            <td class="col-1">
+              <%= @comments.size %>
+            </td>
+            <td class="col-3">
+              <%= time_ago_in_words(r.created_at) %> <%= t('ago') %>
+            </td>
+          </tr>
+        <% end %>
+
+      </table>
     </div>
   <% end %>
 
