date issue fixed, fixes #3575
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3772 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/batches/edit.html.erb
+++ b/app/views/batches/edit.html.erb
@@ -51,12 +51,12 @@
 
       <div class="label-field-pair">
         <div class="label-container"><%= t('start_date') %></div>
-        <div class="input-container"><%= calendar_date_select_tag 'batch[start_date]',I18n.l(@batch.start_date, :format=>"%d-%m-%Y"), :popup => "force"%></div>
+        <div class="input-container"><%= calendar_date_select_tag 'batch[start_date]',I18n.l(@batch.start_date.to_date, :format=>:default), :popup => "force"%></div>
       </div>
 
       <div class="label-field-pair">
         <div class="label-container"><%= t('end_date') %></div>
-        <div class="input-container"><%= calendar_date_select_tag 'batch[end_date]',I18n.l(@batch.end_date, :format=>"%d-%m-%Y") ,:popup => "force"%></div>
+        <div class="input-container"><%= calendar_date_select_tag 'batch[end_date]',I18n.l(@batch.end_date.to_date, :format=>:default) ,:popup => "force"%></div>
       </div>
 
       <%= submit_tag "", :value => "► #{t('save')}", :class => "submit_button" %>
