--- a/app/views/timetable/_table.html.erb
+++ b/app/views/timetable/_table.html.erb
@@ -47,7 +47,7 @@
               <%= t('time_text') %>
             </div>
             <div class="bottom">
-              <div class="course">
+              <div class="course themed_text">
                 <%= b.course.code + ' - ' + b.name %>
               </div>
             </div>
