--- a/app/views/student/_student_category_create_form.erb
+++ b/app/views/student/_student_category_create_form.erb
@@ -18,13 +18,14 @@
 #under the License. -%>
 
 <div class="box">
-<% form_for :student_category, :url => {:action => 'categories'} do |f| %>
-<div class="label-field-pair">
-  <label><%= t('enter_new_category') %> : </label>
-<div class="text-input-bg"><%= f.text_field :name, :value => '' %>
-</div>
-  </div>
-  <%= submit_tag "", :value => "► #{t('save')}", :class => "submit_button" %>
+  <% form_for :student_category, :url => {:action => 'categories'} do |f| %>
+    <%= error_messages_for 'student_category', :header_message => nil %>
+    <div class="label-field-pair">
+      <label><%= t('enter_new_category') %> : </label>
+      <div class="text-input-bg"><%= f.text_field :name, :value => '' %>
+      </div>
+    </div>
+    <%= submit_tag "", :value => "► #{t('save')}", :class => "submit_button" %>
 
-<% end %>
+  <% end %>
 </div>
