--- a/app/views/student/_student_category_edit_form.erb
+++ b/app/views/student/_student_category_edit_form.erb
@@ -19,8 +19,9 @@
 
 <div class="box">
 <% form_remote_tag :url => {:action => 'category_update'}  do |f| %>
+  <%= error_messages_for 'student_category', :header_message => nil %>
 <div class="label-field-pair">
-  <label><%= t('edit_category') %>: <%= @student_category.name %> </label>
+  <label><%= t('edit_category') %>: <%= @student_category_name%> </label>
   <%= hidden_field_tag :id, @student_category.id %>
 <div class="text-input-bg"> <%= text_field_tag :name, @student_category.name %></div></div>
   <%= submit_tag "", :value => "► #{t('save')}", :class => "submit_button" %>
