style issue fixed
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3780 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/rtl/employee/admission4.css
+++ b/public/stylesheets/rtl/employee/admission4.css
@@ -89,7 +89,10 @@
     margin : 5px 10px 0 0;
     width : 210px;
 }
-
+#search-text-box #query:focus {
+    background : transparent !important;
+    border : none !important;
+}
 .employee-search-options{
     float:right;
     background : #fff url(../../../images/form_bg/smalltextbox.jpg) no-repeat;
