--- a/public/stylesheets/employee/admission4.css
+++ b/public/stylesheets/employee/admission4.css
@@ -89,7 +89,10 @@
     margin : 5px 0 0 10px;
     width : 210px;
 }
-
+#search-text-box #query:focus {
+    background : transparent !important;
+    border : none !important;
+}
 .employee-search-options{
     float:left;
     background : #fff url(../../images/form_bg/smalltextbox.jpg) no-repeat;
