--- a/public/stylesheets/rtl/payroll/manage_payroll.css
+++ b/public/stylesheets/rtl/payroll/manage_payroll.css
@@ -23,7 +23,10 @@
     margin : 5px 10px 0 0;
     width : 210px;
 }
-
+#page-yield .payroll-input-bg input:focus {
+    background : transparent !important;
+    border : none !important;
+}
 #submit-button input{
    -moz-border-radius:10px;
     -webkit-border-radius:10px;
