style issue fixed, fixes #3564
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3782 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/employee/_address.erb
+++ b/app/views/employee/_address.erb
@@ -31,12 +31,12 @@
 <div class="extender"></div>
 <div class="edit-pdf-group">
   <%if permitted_to? :edit2,:employee%>
-    <div class="edit">
-      <%= link_to "► #{t('edit_text')}",  :controller => "employee", :action => "edit2", :id =>@employee.id %>
+    <div>
+      <%= link_to "► #{t('edit_text')}",  {:controller => "employee", :action => "edit2", :id =>@employee.id}, :class=> 'user_button' %>
     </div>
   <%end%>
   <% if permitted_to?  :profile_pdf , :employee %>
-  <div class="pdf">
+  <div>
     <%= link_to " ► #{t('pdf_report')}",
       {:controller => "employee", :action => "profile_pdf", :id => @employee.id},:target => '_blank', :class=> 'user_button' %>
   </div>
