--- a/app/views/employee/_contact.erb
+++ b/app/views/employee/_contact.erb
@@ -27,12 +27,12 @@
 
 <div class="edit-pdf-group">
   <% if permitted_to? :edit_contact,:employee %>
-    <div class="edit">
-      <%= link_to "► #{t('edit_text')}",   :controller => "employee", :action => "edit_contact", :id =>@employee.id %>
+    <div>
+      <%= link_to "► #{t('edit_text')}",  { :controller => "employee", :action => "edit_contact", :id =>@employee.id}, :class=> 'user_button' %>
     </div>
   <%end%>
   <% if permitted_to?  :profile_pdf , :employee %>
-  <div class="pdf">
+  <div>
     <%= link_to "► #{t('pdf_report')}",
       {:controller => "employee", :action => "profile_pdf", :id => @employee.id},:target => '_blank', :class=> 'user_button' %>
   </div>
