--- a/app/views/employee/_view_payslip.erb
+++ b/app/views/employee/_view_payslip.erb
@@ -94,15 +94,15 @@
 </ul>
 <% if permitted_to? :delete_payslip, :payroll %>
   <div class="edit-delete-link">
-    <%= link_to "#{t('delete_text')}",{:controller => "employee", :action => "delete_payslip", :id=> @emp.id, :id2=>@salary_date}, :confirm=>"#{t('delete_confirm_msg')}" %>
+    <%= link_to "#{t('delete_text')}",{:controller => "employee", :action => "delete_payslip", :id=> @emp.id, :id2=>@salary_date}, :confirm=>"#{t('delete_confirm_msg')}", :class=>"user_button" %>
   </div>
 <% end %>
 <% if @current_user==@emp.user %>
-  <div class="pdf-link">
-    <%= link_to "► #{t('pdf_report')}", {:controller=>"employee", :action=>"individual_payslip_pdf", :id=>@emp.id, :id2=>@salary_date}, :target=> "_blank" %>
+  <div>
+    <%= link_to "► #{t('pdf_report')}", {:controller=>"employee", :action=>"individual_payslip_pdf", :id=>@emp.id, :id2=>@salary_date}, :target=> "_blank", :class=>"user_button" %>
   </div>
 <% elsif permitted_to?     :employee_individual_payslip_pdf,:employee %>
-  <div class="pdf-link">
-    <%= link_to "► #{t('pdf_report')}", {:controller=>"employee", :action=>"employee_individual_payslip_pdf", :id=>@emp.id, :id2=>@salary_date}, :target=> "_blank" %>
+  <div>
+    <%= link_to "► #{t('pdf_report')}", {:controller=>"employee", :action=>"employee_individual_payslip_pdf", :id=>@emp.id, :id2=>@salary_date}, :target=> "_blank", :class=>"user_button" %>
   </div>
 <% end %>
