--- a/public/stylesheets/employee/profile.css
+++ b/public/stylesheets/employee/profile.css
@@ -196,23 +196,12 @@
     text-align: left;
 }
 .edit-delete-link{
-    -moz-border-radius:10px;
-    -webkit-border-radius:10px;
-    background:#27292B none repeat scroll 0 0;
-    color:#FFFFFF;
-    font-family:arial;
-    font-size:14px;
-    font-weight:bold;
     margin:0px auto;
-    margin-top:30px;
-    padding:7px 12px;
-    border:none;
-    text-align:center;
     width:70px;
-    cursor:pointer;
 }
 
 .edit-delete-link a{
+    width: 70px;
     color:#fff;
     text-decoration: none;
 }
