style issue fixed, fixes #3564
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3784 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/employee/edit_rejected_payslip.css
+++ b/public/stylesheets/employee/edit_rejected_payslip.css
@@ -53,7 +53,23 @@
     margin : 5px 0 0 10px;
     width : 135px;
 }
-
+#submit-button input{
+    -moz-border-radius:10px;
+    -webkit-border-radius:10px;
+    background:#27292B none repeat scroll 0 0;
+    color:#FFFFFF;
+    font-family:arial;
+    font-size:14px;
+    font-weight:bold;
+    margin-left:281px;
+    margin-top:30px;
+    padding:7px 10px;
+    border:none;
+    cursor:pointer;
+}
+#submit-button input:hover{
+    background: #373B3F;
+}
 a.user_button{
     margin-top: 0 !important;
 }
