--- a/app/views/finance/_master_category_particulars_edit_form.html.erb
+++ b/app/views/finance/_master_category_particulars_edit_form.html.erb
@@ -47,7 +47,7 @@
               {:onchange => "#{remote_function(:url => {:action => "student_or_student_category"},
                 :with => "'select_value='+value")}",:checked => true}) %> <%= t('student_category') %>
           <% else %>
-            <%= radio_button("particulars'","select","all",{:onchange => "#{remote_function(:url => {:action => "student_or_student_category"},
+            <%= radio_button("particulars","select","all",{:onchange => "#{remote_function(:url => {:action => "student_or_student_category"},
                 :with => "'select_value='+value")}", :checked => true}) %><%= t('all') %><br />
             <%= radio_button("particulars","select","category",
               {:onchange => "#{remote_function(:url => {:action => "student_or_student_category"},
